# Laboratorio3_parte2-Grupo-8

software1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
software1/include/: lib_grupox.h  tty_lib2.h
software1/src/: config_tty1.cpp  main.cpp  participant.cpp
